# si-tools

./: .gitignore  environment.yml  precious.toml
.ipynb_checkpoints/: environment-checkpoint.yml
pipelines/: .gitignore  largeutf8.py  pyproject.toml  sugr_games.py  sugr_games_metaflow.py  sugr_games_onefile.py  sugr_islands.py  sugr_matchups.py  sugr_metaflow.py
pipelines/data/: escalations.tsv  expansions.tsv  extra_adversaries.tsv  spirits.tsv
pipelines/data/input/: adversaries.tsv  escalations.tsv  expansions.tsv  layouts.tsv  spirits.tsv
pipelines/data/input/combinations/: 1.parquet  2.parquet  3.parquet  4.parquet  5.parquet  6.parquet
pipelines/flows/site/: sugr_flow.py
pipelines/flows/sugr/: games_flow.py  islands_flow.py  transformations
pipelines/flows/utilities/: dataset.py  hive_dataset.py  working_dir.py
pipelines/pipelines/sugr/: islands.py  sugr_games.py  sugr_metaflow.py
pipelines/pipelines/utilities/: working_dir.py
pipelines/tests/site/: test_package.py
pipelines/tests/sugr/: test_adversaries.py  test_games.py  test_islands.py  test_spirits.py
pipelines/tests/sugr/test_spirits/: test_calculate_matchups.py  test_generate_combinations.py  test_spirits_by_expansions.py
pipelines/tests/utilities/: test_dataset.py  test_hive_dataset.py  test_working_dir.py
pipelines/transformations/: sugr_adversaries.py  sugr_games.py  sugr_islands.py  sugr_spirits.py
pipelines/transformations/site/: __init__.py  package.py
pipelines/transformations/sugr/: __init__.py  adversaries.py  expansions.py  games.py  islands.py  spirits.py  sugr_adversaries.py  sugr_spirits.py
pipelines/utilities/: __init__.py  working_dir.py
site/: .gitignore  index.html  package-lock.json  package.json
site/data/: adversaries.feather  spirits.feather
site/data/islands/Type=4B/Players=1/: 0.feather
site/data/islands/Type=4B/Players=2/: 0.feather
site/data/islands/Type=4B/Players=3/: 0.feather
site/data/islands/Type=4B/Players=4/: 0.feather
site/data/islands/Type=6B/Players=1/: 0.feather
site/data/islands/Type=6B/Players=2/: 0.feather
site/data/islands/Type=6B/Players=3/: 0.feather
site/data/islands/Type=6B/Players=4/: 0.feather  10000.feather  20000.feather  30000.feather
site/data/islands/Type=6B/Players=5/: 0.feather  10000.feather  20000.feather  30000.feather  40000.feather  50000.feather  60000.feather  70000.feather
site/data/islands/Type=6B/Players=6/: 0.feather  10000.feather  20000.feather  (+5 more)
sites/: .gitignore
sites/sugr/: index.html  package-lock.json  package.json
sites/sugr/data/: .gitignore  31020000_games.feather  31020001_games.feather  31020002_games.feather  31020003_games.feather  31020100_games.feather  31020101_games.feather  31020102_games.feather  31020103_games.feather  31020200_games.feather  31020201_games.feather  31020202_games.feather  31020203_games.feather  31020300_games.feather  31020301_games.feather  31020302_games.feather  31020303_games.feather  31020400_games.feather  31020401_games.feather  31020402_games.feather  31020403_games.feather  6B02_islands.feather
(+7573 files in other folders)
