[project]
name = "pipelines"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "bryce", email = "brycekbargar@gmail.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.3.7",
    "pytest>=8.1.1",
]
[tool.ruff]
target-version = "py312"
lint.fixable = ["ALL"]

[tool.pyright]
typeCheckingMode = "basic"

[tool.jupytext]
formats = "ipynb,py:percent"
