[project]
name = "pipelines"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "bryce", email = "brycekbargar@gmail.com"},
]
dependencies = [
    "polars[pyarrow]==1.2.1",
    "metaflow==2.12.8",
    "pylint==3.2.5",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.5.2",
    "pytest>=8.2.2",
    "pytest-cases>=3.8.5",
]

[tool.pdm.scripts]
test = "python -m pytest -vv"
combos = "python -m transformations.sugr.spirits ./data/input/combinations"
flow_islands = "python -m flows.sugr.islands_flow --environment=conda run --input ./data/input/"
flow_games = "python -m flows.sugr.games_flow --environment=conda run --input ./data/input/"
flow_site = "python -m flows.site.sugr_flow --environment=conda run --output ./../site/data/"

[tool.ruff]
target-version = "py312"
[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
ignore = ["ANN101", "ANN102", "ANN401", "D105", "FIX002", "PLR2004", "TD002", "TD003"]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["D", "INP001", "N813", "S101"]
"**/flows/*" = ["D", "T201"]

[tool.pyright]
typeCheckingMode = "basic"

[tool.jupytext]
formats = "ipynb,py:percent"
